--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       --collation-server=utf8mb4_unicode_ci 
       --default-authentication-plugin=mysql_native_password 
       --innodb-buffer-pool-size=32M 
-      --max-connections=10
+      --max-connections=50
       --innodb-flush-log-at-trx-commit=2
       --skip-log-bin
       --skip-name-resolve
@@ -28,14 +28,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.5'
-        reservations:
-          memory: 256M
-          cpus: '0.25'
 
   app:
     build: .
@@ -43,6 +35,11 @@ services:
     restart: unless-stopped
     ports:
       - "4000:4000"
+    volumes:
+      - .:/app
+      - /app/deps
+      - /app/_build
+      - /app/node_modules
     environment:
       - MIX_ENV=dev
       - DATABASE_URL=ecto://root:password@mysql:3306/classification_utility_dev
@@ -50,14 +47,6 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.5'
-        reservations:
-          memory: 256M
-          cpus: '0.25'
 
 volumes:
   mysql_data:
