--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,16 @@ services:
       - MIX_ENV=dev
       - DATABASE_URL=ecto://root:password@mysql:3306/classification_utility_dev
       - PORT=4000
+      - HTTP_PROXY=
+      - HTTPS_PROXY=
+      - NO_PROXY=localhost,127.0.0.1,mysql
     depends_on:
       mysql:
         condition: service_healthy
+    network_mode: "bridge"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
 
 volumes:
   mysql_data:
