Enhance proxy management and database integration
- Introduced an in-memory proxy cache to optimize proxy retrieval, reducing database queries and improving performance.
- Added scripts for bulk-importing proxies from an external source and verifying the import, enhancing the proxy management workflow.
- Updated the production configuration to dynamically set the HTTP port based on environment variables, improving deployment flexibility.
- Refactored date validation logic to ensure strict adherence to post date requirements, reverting to only allow posts from yesterday.
- Enhanced error handling in proxy connectivity checks and improved retry mechanisms for database connections, ensuring robustness in proxy operations.

--- a/.dockerignore
+++ b/.dockerignore
@@ -37,10 +37,9 @@ Thumbs.db
 tmp/
 temp/
 
-# Docker files
+# Docker files (exclude from image; .dockerignore is not self-excluded so Docker can use it)
 Dockerfile*
 docker-compose*.yml
-.dockerignore
 
 # Node modules (if any)
 node_modules/
