Refactor Docker setup and enhance test execution scripts
- Updated docker-compose.yml to use the default network for better DNS resolution.
- Modified README.md to clarify test execution commands and added instructions for fetching test dependencies.
- Enhanced run_tests_fast.sh to ensure test dependencies are fetched before running tests.
- Improved run_tests.sh to check Docker status, resolve MySQL host dynamically, and provide clearer test execution summaries.
- Added new documentation for running tests in Docker, detailing usage and optional arguments.
- Updated database configuration in dev and test environments to allow hostname overrides for better flexibility.
- Introduced new unit tests for proxy management and improved error handling in various modules.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,10 +50,7 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    network_mode: "bridge"
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
+    # Use Compose default network so "mysql" hostname resolves (bridge mode breaks DNS)
 
 volumes:
   mysql_data:
